--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
-      content="A simple TypeScript, Vite.js, React.js, Three.js & TailwindCSS template with a sample 3D scene"
+      content="A 3D Website Template made with TypeScript, Vite.js, React.js, Three.js & TailwindCSS."
     />
-    <title>TypeScript, Vite.js, React.js, Three.js & TailwindCSS template</title>
+    <title>Buy iPhone 14 Pro Max - Apple</title>
     <link rel="icon" type="image/svg" href="/vite.svg" />
   </head>
   <body>
