--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
-      content="A 3D Website Template made with TypeScript, Vite.js, React.js, Three.js & TailwindCSS."
+      content="A 3D iPhone 14 Website made with TypeScript, Vite.js, React.js, Three.js & TailwindCSS."
     />
     <title>Buy iPhone 14 Pro Max - Apple</title>
     <link rel="icon" type="image/svg" href="/vite.svg" />
